# factorio

./: LICENSE.txt  README.md  pyproject.toml
src/: factori.py  formula.json  formula.py
src/factorio/: __about__.py  assembling_machine.py  util.py
src/factorio/satisfactory/: formula.json  formula.py  formula2.py  spider.py  test.ipynb  test.md
tests/: __init__.py  test.py
