[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorio"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "hs3434", email = "1606272735@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click>=8.0.0",
  "beautifulsoup4>=4.14.0",
  "networkx>=2.3.0",
  "numpy>=2.3.0",
  "torch>=2.6.0",
  "requests>=2.32.0",
]
[project.optional-dependencies]
# 分组1：建议的解析器（搭配beautifulsoup4使用，非强制但推荐）
recommended = [
  "lxml>=4.9.0",  # bs4的高效解析器，建议安装
  "html5lib>=1.1",  # 兼容老旧HTML的解析器，备选推荐
]
# 分组2：开发/测试依赖（开发者或需要运行测试的用户安装）
dev = [
  "ipython>=9.0.0",
  "pytest>=7.0.0",
  "black>=24.0.0",
  "flake8>=6.0.0",
  "hatch>=1.16.0",
  "hatchling>=1.28.0",
]
# 分组3：完整功能依赖（需要使用包的全部功能时安装）
full = [
  "lxml>=4.9.0",
  "pytest>=7.0.0",
  "matplotlib>=3.7.0",
]
[project.urls]
Documentation = "https://github.com/hs3434/factorio#readme"
Issues = "https://github.com/hs3434/factorio/issues"
Source = "https://github.com/hs3434/factorio"

[tool.hatch.version]
path = "src/factorio/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/factorio tests}"

[tool.coverage.run]
source_pkgs = ["factorio", "tests"]
branch = true
parallel = true
omit = [
  "src/factorio/__about__.py",
]

[tool.coverage.paths]
factorio = ["src/factorio", "*/factorio/src/factorio"]
tests = ["tests", "*/factorio/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
